optimise background photo size

--- a/css/main.css
+++ b/css/main.css
@@ -9257,7 +9257,7 @@ a:focus {
   padding: 100px 0;
   text-align: center;
   color: #f4f4f4;
-  background: url(../img/intro-bg.png) no-repeat bottom center scroll;
+  background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
   border-color: #333333;
   -webkit-background-size: cover;
   -moz-background-size: cover;
